# eletric_power_consumption_an_exploratory_and_predictive_analysis

./: .coveragerc  .env.example  README.md  README2.md  SETUP.md  pyproject.toml
src/app/: app.py  checker.py  importer.py  processor.py  validator.py
src/app/development/: structure.py
src/app/getting_started/: home.py
src/app/project/: dataframe.py  initiative.py
src/app/user_experience/: settings.py
src/app/visualization/: exploratory_analysis.py  predictive_analysis.py
src/data_pipeline/: checker.py  importer.py  processor.py  validator.py
src/my_app/: streamlit_app.py
src/my_app/project/: dataframe.py  initiative.py
src/my_app/user_experience/: login.py  options.py
src/my_app/visualization/: exploratory_analysis.py
tests/: test_importer.py
